--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,33 @@
 .intReq {
     width: 20px;
 }
+/* 
+#menuContainer {
+    height: 100vh;
+    width: 100vw;
+    background-color: blue;
+} */
+
+body {
+    background-color: rgb(3, 112, 171);
+}
+
+#editContainer, #editContainers, #createContainer, #menuListContainer {
+    /* margin: 10px; */
+    padding: 5px;
+    width: 30vw;
+    height: 90vh;
+    background-color: white;
+
+}
+#addItemDiv { 
+    /* position: absolute; */
+    bottom: 0px;
+    width: 100%;
+}
+
+#templateFrame {
+    height: 90%;
+    overflow-y: auto;
+    /* overflow-y: visible; */
+}
